# ncview

./: '  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Ncview-appdefaults  README  README.md  README.sgi  README.solaris  README_LOCAL  RELEASE_NOTES  aclocal.m4  config.h.in  config.h.in~  configure  configure.in  geteuid  hh_config  hh_run  hotres.Rmap  install-appdef  regenerate  tt
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: SciPlot.1  ncview.1  ncview.1.sed
m4macros/: netcdf.m4  png.m4  udunits2.m4
src/: Makefile.am  Makefile.am.orig  Makefile.in  SciPlot.c  SciPlot.h  SciPlotP.h  do_buttons.c  do_print.c  epic_time.c  file.c  file_netcdf.c  geteuid.c  handle_rc_file.c  ncview.bitmaps.h  ncview.c  ncview.defines.h  ncview.includes.h  ncview.protos.h  overlay.c  overlay_coasts_p08deg.h  overlay_coasts_p8deg.h  overlay_usa.h  qsort.c  stringlist.c  stringlist.h  tsh  udu.c  utCalendar2_cal.c  util.c  view.c
src/.deps/: RadioWidget.Po  SciPlot.Po  calcalcs.Po  cbar.Po  colormap_funcs.Po  dataedit.Po  display_info.Po  do_buttons.Po  do_print.Po  epic_time.Po  file.Po  file_netcdf.Po  filesel.Po  geteuid.Po  handle_rc_file.Po  interface.Po  make_tc_data.Po  ncview.Po  overlay.Po  plot_range.Po  plot_xy.Po  printer_options.Po  range.Po  set_options.Po  stringlist.Po  udu.Po  utCalendar2_cal.Po  util.Po  utils.Po  view.Po  x_interface.Po
src/interface/: '  RadioWidget.c  RadioWidget.h  cbar.c  closed_circle_bitmap.h  colormap_funcs.c  dataedit.c  display_info.c  fallback_resources.h  filesel.c  helvR08.h  interface.c  make_tc_data.c  open_circle_bitmap.h  plot_range.c  plot_xy.c  printer_options.c  range.c  set_options.c  utils.c  widgets.h  x_interface.c
